--- a/app/src/main/res/layout/layout_dropdownmenu.xml
+++ b/app/src/main/res/layout/layout_dropdownmenu.xml
@@ -108,6 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="New Switch"
+                android:checked="true"
                 android:id="@+id/switch1"
                 android:layout_weight="1" />
 
